# presence-ia

./: .claude-context  .env.example  .gitignore  RAPPORT_MVP_DEMO.md  README.md  _SUIVI.md  prospects.csv  requirements.txt
libs/marketing_module/: __init__.py  database.py  models.py  module.py  pyproject.toml
libs/marketing_module/TESTS/: test_crm.py  test_models.py  test_rotation.py  test_send.py
libs/marketing_module/api/: main.py
libs/marketing_module/api/routes/: __init__.py  calendly.py  campaigns.py  compliance.py  crm.py  domains.py  google_calendar.py  mailboxes.py  reporting.py  rotation.py  send.py  sequences.py  social.py  warmup.py  webhooks.py
libs/marketing_module/channels/: __init__.py  base.py
libs/marketing_module/channels/calendly/: __init__.py  client.py
libs/marketing_module/channels/email/: __init__.py
libs/marketing_module/channels/email/providers/: __init__.py  base.py  brevo.py
libs/marketing_module/channels/google_calendar/: __init__.py  auth.py  client.py
libs/marketing_module/channels/sms/: __init__.py
libs/marketing_module/channels/sms/providers/: __init__.py  twilio.py
libs/marketing_module/channels/social/: __init__.py
libs/marketing_module/channels/social/providers/: __init__.py  instagram.py  pinterest.py
libs/marketing_module/configs/: presence_ia_seed.json  seed_loader.py  sublym_seed.json
libs/marketing_module/crm/: __init__.py  module.py
libs/page_builder/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
libs/page_builder/examples/: fastapi_example.py  simple_landing.py  test_design_tokens.py
libs/page_builder/i18n/: en.json  fr.json
libs/page_builder/seeds/: README.md  demo_landing.json
libs/page_builder/src/: __init__.py  builder.py  fastapi_integration.py  router.py
libs/page_builder/src/blocks/: __init__.py  base.py  content.py  cta.py  faq.py  footer.py  hero.py  image.py  navbar.py  pricing.py  stat.py  steps.py  testimonial.py
libs/page_builder/src/core/: __init__.py  design_system.py  i18n.py  schemas.py
libs/page_builder/src/manifest/: __init__.py  parser.py  schema.py
libs/page_builder/src/renderer/: base.py  css.py  css_legacy.py  html.py
libs/page_builder/src/scss/: _grid.scss  _reset.scss  _variables.scss  main.scss
libs/page_builder/src/scss/blocks/: _content.scss  _cta.scss  _faq.scss  _footer.scss  _hero.scss  _image.scss  _navbar.scss  _pricing.scss  _stat.scss  (+2 more)
libs/page_builder/tests/: __init__.py  test_blocks.py  test_i18n.py  test_manifest.py  test_schemas.py
libs/theme_composer/: pyproject.toml  requirements.txt
libs/theme_composer/theme_composer/: __init__.py  composer.py  font_matcher.py  harmony_rules.py  style_presets.py
libs/theme_generator/: pyproject.toml
libs/theme_generator/theme_generator/: __init__.py  generator.py
(+199 files in other folders)
