[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-module"
version = "1.0.0"
description = "EURKAI — Unified multi-channel marketing module (email, SMS, social, CRM)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "requests>=2.31",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
brevo = []
twilio = ["twilio>=9.0"]
all = ["twilio>=9.0"]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = [".."]
include = ["marketing_module*"]

[tool.pytest.ini_options]
testpaths = ["TESTS"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
