[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurkai-theme-composer"
version = "0.1.0"
description = "Analyseur de design tokens et compositeur de thèmes (EURKAI)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "anthropic>=0.40.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]
