[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurkai-theme-generator"
version = "0.1.0"
description = "Générateur de CSS à partir de ThemePreset (EURKAI)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]
